fix body height on mobile screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,103 +1,82 @@
-:root {
-  --bright-orange: hsl(31, 77%, 52%);
-  --dark-cyan: hsl(184, 100%, 22%);
-  --very-dark-cyan: hsl(179, 100%, 13%);
-  --transparent-white: hsla(0, 0%, 100%, 0.75);
-  --very-light-gray: hsl(0, 0%, 95%);
-  --navy-blue: hsl(228, 45%, 44%);
-}
-
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
   font-size: 15px;
-  background-color: var(--very-light-gray);
+  background-color: hsl(0, 0%, 95%);
   padding: 20%;
 }
 
 .col-md-4.sedan {
-  background-color: var(--bright-orange);
+  background-color: hsl(31, 77%, 52%);
   padding: 3rem;
   border-radius: 0.625rem 0 0 0.625rem;
 }
 
 .col-md-4.suvs {
-  background-color: var(--dark-cyan);
+  background-color: hsl(184, 100%, 22%);
   padding: 3rem;
 }
 
 .col-md-4.luxury {
-  background-color: var(--very-dark-cyan);
+  background-color: hsl(179, 100%, 13%);
   padding: 3rem;
   border-radius: 0 0.625rem 0.625rem 0;
 }
 
 p {
-  color: var(--transparent-white);
+  color: hsla(0, 0%, 100%, 0.75);
   font-family: "Lexend Deca", sans-serif;
   font-weight: 400;
 }
 
 h1 {
-  color: var(--very-light-gray);
+  color: hsl(0, 0%, 95%);
   font-family: "Big Shoulders Display", cursive;
   font-weight: 700;
   margin-bottom: 2.5rem;
 }
 
 .sedan-button {
-  background: var(--very-light-gray);
-  color: var(--bright-orange);
-  border-color: var(--very-light-gray);
+  background: hsl(0, 0%, 95%);
+  color: hsl(31, 77%, 52%);
+  border-color: hsl(0, 0%, 95%);
   border-radius: 15px;
   margin-top: 3.5rem;
 }
 
 .suv-button {
-  background: var(--very-light-gray);
-  color: var(--dark-cyan);
-  border-color: var(--very-light-gray);
+  background: hsl(0, 0%, 95%);
+  color: hsl(184, 100%, 22%);
+  border-color: hsl(0, 0%, 95%);
   border-radius: 15px;
   margin-top: 3.5rem;
 }
 
 .luxury-button {
-  background: var(--very-light-gray);
-  color: var(--very-dark-cyan);
-  border-color: var(--very-light-gray);
+  background: hsl(0, 0%, 95%);
+  color: hsl(179, 100%, 13%);
+  border-color: hsl(0, 0%, 95%);
   border-radius: 15px;
   margin-top: 3.5rem;
 }
 
-.sedan-icon, .suv-icon, .luxury-icon {
+.sedan-icon,
+.suv-icon,
+.luxury-icon {
   margin-bottom: 2.5rem;
 }
 
 .btn:hover {
   background: transparent;
-  border-color: var(--very-light-gray);
+  border-color: hsl(0, 0%, 95%);
 }
 
-footer {
-  font-size: 11px;
-  text-align: center;
-  margin-top: 2rem;
-}
-
-footer a {
-  color: var(--navy-blue);
-}
-
-
-
-@media only screen and (max-width: 768px) {
-  .col-md-4.sedan {
-    border-radius: 0.625rem 0.625rem 0 0;
-  }
-  .col-md-4.luxury {
-    border-radius: 0 0 0.625rem 0.625rem;
+@media(max-width:500px) {
+  body {
+    padding: 0;
+    margin: 2rem;
   }
 }
